# MineSweeper_Touhou

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
resources/: resources.qrc
src/: main.cpp
src/core/include/: gameboard.h  mineunit.h
src/core/src/: gameboard.cpp  mineunit.cpp
src/gui/include/: customdialog.h  lostdialog.h  mainwindow.h  scenewidget.h  windialog.h
src/gui/src/: customdialog.cpp  lostdialog.cpp  mainwindow.cpp  scenewidget.cpp  windialog.cpp
src/gui/view/: CustomDialog.ui  LostDialog.ui  MainWindow.ui  WinDialog.ui
src/utils/include/: constants.h  resourceloader.h
src/utils/src/: resourceloader.cpp
tests/: CMakeLists.txt
tests/core/: gameboard_test.cpp  mineunit_test.cpp
tests/utils/: resouceloader_test.cpp
